Bug 122498 - EMF+ Rotation is not working correctly for DrawEllipse record
Summary: EMF+ Rotation is not working correctly for DrawEllipse record
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Bartosz
URL:
Whiteboard: target:6.3.0
Keywords: filter:emf
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2019-01-04 21:36 UTC by V Stuart Foote
Modified: 2019-01-08 09:22 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description V Stuart Foote 2019-01-04 21:36:44 UTC
Moved from bug 106084

Issue with the image1.emf of attachment 132223 [details] -- the two Circled Arrow symbols (circuit Galvonometer symbols?) show the arrow intersecting the line -- the circle should mask/clip the line below but is missing. 

as previewed in attachment 148046 [details]
Comment 1 Bartosz 2019-01-06 00:24:44 UTC
I found root cause of problem. The rotation support for Ellipse, Arc and Pie was wrong.
It was fixed with the review:
https://gerrit.libreoffice.org/#/c/65898/
Comment 2 Commit Notification 2019-01-07 22:18:46 UTC
Bartosz Kosiorek committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7809ec859d5bdb5dedb259a362a15324088b334c%5E%21

tdf#122498 EMF+ Fix rotation of Ellipse, Arc and Pie

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.